tests/NormalTests/paczka1/small_fuzzy/21859645.err
Error in line 1: DFx A217 9,1
Error in line 4: Yrtw A885 10,2
